code-server/httproute.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: code-server-route
spec:
  parentRefs:
    - name: main
      namespace: gateway
  hostnames:
    - ide.pmh.codes
  rules:
    - backendRefs:
        - name: code-server
          port: 8080
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: code-server-auth
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: code-server-route
  extAuth:
    http:
      backendRefs:
        - name: ak-outpost-authentik-embedded-outpost
          namespace: authentik
          port: 9000
      headersToBackend:
        - Cookie
        - X-Forwarded-Host
        - X-Forwarded-Proto
        - X-Forwarded-Uri
